Fixed contact page on mobile

--- a/style.css
+++ b/style.css
@@ -338,11 +338,20 @@ body::after {
         position: relative;
         text-align: left;
         width: 100%;
-        height: 200px;
+        height: 250px;
         margin: 0 auto;
         overflow: hidden;
         color: white;
         padding-top: 50px;
+    }
+    .sectionDetailContainer img {
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 100%;
+        width: auto;
+        margin: auto;
+        z-index: 0;
     }
 
     .dayTableContainer {
